k8s-kong-istio/kong-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: notification
  # annotations:
    # konghq.com/plugins: kong-cors
    # konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: "/api/checkNotification/refresh"
        pathType: Prefix
        backend:
          service:
            name: check-notification-service
            port:
              number: 8080
